--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br>
             <h5> </h5>
             <h3>
-                <span class="yellow">Last&nbspupdated&nbspSunday,&nbspSeptember&nbsp17,&nbsp2023, Removed previous versions of Thendro 32 items #28 & #30.</span></h3>
+                <span class="yellow">Last&nbspupdated&nbspFriday,&nbspOctober&nbsp6,&nbsp2023.<br>New PRINT versions of Thendro Ultimate Blend 32 items #28 Tropical Ice & #30 Orange.</span></h3>
             <!-- <br> -->
         </header>
 
