updated for 2023 :price list

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br>
             <h5> </h5>
             <h3>
-                <span class="yellow">Last&nbspupdated&nbspFriday,&nbspOctober&nbsp6,&nbsp2023.<br>New PRINT versions of Thendro Ultimate Blend 32 items #28 Tropical Ice & #30 Orange.</span></h3>
+                <span class="yellow">Last&nbspupdated&nbspTuesday,&nbspOctober&nbsp17,&nbsp2023.<br>New PRINT versions of Thendro Ultimate Blend 32 items #28 Tropical Ice & #30 Orange.<br>New #49 2023 PRICE SHEET.</span></h3>
             <!-- <br> -->
         </header>
 
