1-11-24-1553  Status Quouc instructions update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br>
             <h5> </h5>
             <h3>
-                <span class="yellow">Last&nbspupdated&nbspTuesday,&nbspOctober&nbsp17,&nbsp2023.<br>New PRINT versions of Thendro Ultimate Blend 32 items #28 Tropical Ice & #30 Orange.<br>New #49 2023 PRICE SHEET.</span></h3>
+                <span class="yellow">Last&nbspupdated&nbspThursday,&nbspJanuary&nbsp11,&nbsp2024.<br>Added Ultra Clean 3-up Instructions<br>for #45 Netherlands,  #46 Spanish,<br>#47 German and #48 USA.</span></h3>
             <!-- <br> -->
         </header>
 
